Added message to beginning of diffusion

--- a/QMC/Diffusion Quantum Monte Carlo.ipynb
+++ b/QMC/Diffusion Quantum Monte Carlo.ipynb
@@ -17,6 +17,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Builds on sampling and VMC, the other file in this repository*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e97204ae",
    "metadata": {},
    "source": [
