I believe I added an animation

--- a/QMC/Sampling and VMC.ipynb
+++ b/QMC/Sampling and VMC.ipynb
@@ -43,6 +43,20 @@
     "4. Repeat the process, now starting at $\\bf{X_1}$ and moving to $\\bf{X_2}$...\n",
     "5. For the first few hundred moves, the 'equilibration' phase, do not save the points. After a while, the points should begin to stay within the bounds of the probability distribution $P(\\bf{X})$, and you can save the points.\n",
     "\n",
+    "Below is an animation of the process: starting from the first point, a move is suggested and accepted, then another is suggested and rejected, before a final is suggested and accepted."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![MCMC algorithm animation](<MCMC animation.gif>)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "When calculating expectation value $E$ of a function $f$, the following weighted average gives more accurate results than simply evaluating the function once: $$E(f, P) \\approx \\frac{1}{M}\\sum_{n=1}^M \\frac{1}{2} \\left(f(\\bf{X_i})W(\\bf{X_i}|\\bf{X_{i-1}})+(1-W(\\bf{X_i}|\\bf{X_{i-1}}))f(\\bf{X_{i-1}})\\right)$$\n",
     "\n",
     "Where $M$ is the number of points sampled.\n",
