Update (1) Sampling and VMC.ipynb
Still trying...

--- a/QMC/(1) Sampling and VMC.ipynb
+++ b/QMC/(1) Sampling and VMC.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![MCMC algorithm animation](./MCMC animation.gif)"
+    "![MCMC algorithm animation](./MCMC%20animation.gif)"
    ]
   },
   {
