--- a/QMC/(2) Diffusion Quantum Monte Carlo.ipynb
+++ b/QMC/(2) Diffusion Quantum Monte Carlo.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import autograd.numpy as np\n",
+    "import autograd.numpy as np #tricky!\n",
     "import autograd\n",
     "from numpy import random as rdm\n",
     "import matplotlib.pyplot as plt\n",
